fix(homebrew): eval shellenv

--- a/.chezmoiscripts/run_after_10-homebrew.tmpl
+++ b/.chezmoiscripts/run_after_10-homebrew.tmpl
@@ -14,6 +14,8 @@ done &>/dev/null &
 
 echo "Installing Homebrew..."
 NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
+eval "$(/opt/homebrew/bin/brew shellenv)"
 {{ end }}
 
 export HOMEBREW_BUNDLE_FILE=~/.config/homebrew/Brewfile
