--- a/.chezmoiscripts/run_after_10-homebrew.tmpl
+++ b/.chezmoiscripts/run_after_10-homebrew.tmpl
@@ -1,6 +1,7 @@
 #!/bin/sh
+# shellcheck shell=bash
 
-set -e
+export PATH="/opt/homebrew/bin:/usr/local/bin${PATH+:$PATH}"
 
 {{ if not (lookPath "brew") }}
 # Prompt for and remember password
