feat: simplify bootstrap

--- a/.chezmoiscripts/run_after_10-homebrew.tmpl
+++ b/.chezmoiscripts/run_after_10-homebrew.tmpl
@@ -4,17 +4,8 @@
 export PATH="/opt/homebrew/bin:/usr/local/bin${PATH+:$PATH}"
 
 {{ if not (lookPath "brew") }}
-# Prompt for and remember password
-echo "Prompting for sudo password..."
-sudo --validate
-while true; do
-    sudo -n true
-    sleep 60
-    kill -0 "$$" || exit
-done &>/dev/null &
-
 echo "Installing Homebrew..."
-NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 {{ end }}
 
 export HOMEBREW_BUNDLE_FILE=~/.config/homebrew/Brewfile
